fixed the horizontal scroll bug

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@
 
 .sd-overlay .canvas-container {
   position: absolute !important;
+  overflow: hidden !important;
 }
 
 .sd-overlay .upper-canvas {
